DeAtChVoteBot/Resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deatchvote
    deployment: deatchvote
  name: deatchvote
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: deatchvote
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: deatchvote
        deployment: deatchvote
    spec:
      containers:
      - image: olfi01/deatchvote:latest
        imagePullPolicy: Always
        name: aspnet
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGe:
            path: /healthz
            port: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "200m"
            memory: "400Mi"
